traefikv2.2 set up

--- a/configuration/traefik/traefik1.7.toml
+++ b/configuration/traefik/traefik1.7.toml
@@ -18,6 +18,8 @@ defaultEntryPoints = ["http"]
 [entryPoints]
   [entryPoints.http]
   address = ":80"
+  [entryPoints.mysql]
+      address = ":3306"
 #    [entryPoints.http.redirect]
 #    entryPoint = "https"
 #  [entryPoints.https]
